# cyrene

./: .gitignore  README.md  package-lock.json  package.json  pnpm-workspace.yaml  start-desktop.bat  tsconfig.base.json  tsconfig.json
apps/desktop/: README.md  package.json
apps/desktop/scripts/: start-dev.mjs
apps/desktop/src/: main.mjs  preload.cjs
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/model-lab/: index.html  package.json  pet.html  settings.html  tsconfig.json  vite.config.ts
apps/model-lab/src/: live2d-display.d.ts  main.tsx  model-viewport.ts  pet-main.ts  pet-window.css  settings-main.tsx  styles.css  tauri-desktop.ts
apps/runtime-smoke/: package.json  tsconfig.json
apps/runtime-smoke/src/: index.ts
core/kernel/: package.json  tsconfig.json
core/kernel/src/: capability-registry.ts  event-bus.ts  index.ts  memory-storage.ts  plugin-runtime.ts
core/renderer-live2d/: package.json
core/renderer-live2d/src/: index.ts  live2d-adapter.ts
core/runtime/: package.json  tsconfig.json
core/runtime/src/: index.ts  pet-actor-manager.ts  pet-actor.ts
docs/: architecture.md  code-health-and-refactoring-plan.md  content-pack-contract.md  live2d-first.md  model-action-system.md  model-control-panel.md  open-source-lessons.md  plugin-contract.md
pets/: live2d-defaults.json
pets/official/cyrene-live2d/: chat.json  runtime.json  (+4 more)
scripts/: generate-model-actions.mjs  sync-pets.mjs  verify-action-flow.mjs  verify-content.mjs
(+26 files in other folders)
